--- a/charts/router/templates/router-clusterrolebinding.yaml
+++ b/charts/router/templates/router-clusterrolebinding.yaml
@@ -17,3 +17,20 @@ subjects:
   namespace: {{ .Release.Namespace }}
 {{- end -}}
 {{- end -}}
+{{- if (.Values.global.use_openshift_rbac) -}}
+apiVersion: authorization.openshift.io/v1
+groupNames: null
+kind: ClusterRoleBinding
+metadata:
+  creationTimestamp: null
+  labels:
+    app: deis-router
+    heritage: deis
+  name: deis:deis-router
+roleRef:
+  name: deis:deis-router
+subjects:
+- kind: ServiceAccount
+  name: deis-router
+  namespace: {{ .Release.Namespace }}
+{{- end -}}
