give these daemonsets and the controller container
the securityContext.privileged so they can do scary things with hostPath
volumes and anyuid

--- a/charts/controller/templates/controller-deployment.yaml
+++ b/charts/controller/templates/controller-deployment.yaml
@@ -24,6 +24,10 @@ spec:
       serviceAccount: deis-controller
       containers:
         - name: deis-controller
+{{- if (.Values.global.use_openshift_rbac) }}
+          securityContext:
+            privileged: true
+{{- end }}
           image: quay.io/{{.Values.org}}/controller:{{.Values.docker_tag}}
           imagePullPolicy: {{.Values.pull_policy}}
           livenessProbe:
