--- a/charts/monitor/charts/telegraf/templates/monitor-telegraf-daemon.yaml
+++ b/charts/monitor/charts/telegraf/templates/monitor-telegraf-daemon.yaml
@@ -19,6 +19,10 @@ spec:
       serviceAccount: deis-monitor-telegraf
       containers:
         - name: deis-monitor-telegraf
+{{- if (.Values.global.use_openshift_rbac) }}
+          securityContext:
+            privileged: true
+{{- end }}
           image: quay.io/{{.Values.org}}/telegraf:{{.Values.docker_tag}}
           imagePullPolicy: {{.Values.pull_policy}}
 {{- if or (.Values.limits_cpu) (.Values.limits_memory)}}
