add the serviceaccount to registry-proxy daemonset

--- a/charts/registry-proxy/templates/registry-proxy-daemon.yaml
+++ b/charts/registry-proxy/templates/registry-proxy-daemon.yaml
@@ -26,6 +26,9 @@ spec:
 {{- if (.Values.global.use_cni) }}
       hostNetwork: true
 {{- end}}
+{{- if (.Values.global.use_openshift_rbac) }}
+      serviceAccount: deis-registry-proxy
+{{- end }}
       containers:
       - name: deis-registry-proxy
 {{- if (.Values.global.use_openshift_rbac) }}
