--- a/values.yaml
+++ b/values.yaml
@@ -56,7 +56,7 @@ global:
   # Valid values are:
   # - true: deis-router will not be deployed. Workflow will not be usable until a Kubernetes ingress controller is installed.
   # - false: deis-router will be deployed (default).
-  experimental_native_ingress: false
+  experimental_native_ingress: true
   # If the Kubernetes cluster uses CNI
   # use_cni: true
   # Set the `listen` variable for registry-proxy's NGINX
@@ -73,9 +73,10 @@ global:
   # Valid values are:
   # - true: all RBAC-related manifests will be installed (in case your cluster supports RBAC)
   # - false: no RBAC-related manifests will be installed
+  #use_rbac: true
   use_rbac: false
   # OpenShift does not yet accept Kubernetes RBAC roles directly, but it can emulate them
-  use_openshift_rbac: true
+  #use_openshift_rbac: true
 
 
 s3:
